<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Case3Activity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/cas_3"
        android:contentDescription="@string/cd_formulaire_de_connexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/cd_pseudonyme_title"
        android:importantForAccessibility="yes"
        android:labelFor="@id/pseudoEditlayout"
        android:text="@string/pseudo"
        app:layout_constraintStart_toStartOf="@+id/pseudoEditlayout"
        app:layout_constraintTop_toBottomOf="@id/textView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pseudoEditlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_pseudonyme_field"
        android:maxWidth="480dp"
        android:minHeight="48dp"
        app:boxStrokeColor="@color/gray400"
        app:endIconMode="custom"
        app:errorContentDescription="@string/error_pseudonyme_field"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:hintTextColor="@color/gray400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pseudo_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:autofillHints="username"
            android:inputType="textPersonName"
            android:minWidth="350dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray400"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/validateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/validate"
        android:contentDescription="@string/cd_valider_button"
        app:layout_constraintEnd_toEndOf="@+id/pseudoEditlayout"
        app:layout_constraintStart_toStartOf="@+id/pseudoEditlayout"
        app:layout_constraintTop_toBottomOf="@+id/pseudoEditlayout" />

</androidx.constraintlayout.widget.ConstraintLayout>